ops(logging): cap all log outputs with rotation and retention
- Docker Compose: add x-logging anchor (json-file, 50m x 5) to all
  long-running services (ES, Kibana, Grafana, Prometheus, Tempo,
  Logstash, OTel Collector)
- Logstash: enable log rotation in active logstash.yml (100 MB x 10,
  7-day age)
- Grafana: enable file-mode logging with daily rotation, 128 MB cap,
  7-day retention in grafana.ini
- Kubelet: add containerLogMaxSize/containerLogMaxFiles (50 Mi x 5)
  to k8s install playbook
- Elastic Agent: add explicit rotateeverybytes (50 MB) and keepfiles
  (7) to both linux and local config templates
- Spark event logs: enable History Server cleaner (7-day max age, 100
  file max) in both K8s and client spark-defaults templates
- Document all log rotation settings in architecture-and-resources.md
  (new section 7)

Made-with: Cursor